--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
 	"name": "clover",
-	"displayName": "clover",
+	"displayName": "Clover",
 	"description": "Clover extension for VSCode.",
 	"version": "0.0.1",
+	"publisher": "yanshouwang",
+	"homepage": "https://github.com/yanshouwang/clover-vscode",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/yanshouwang/clover-vscode.git"
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"keywords": [
+		"clover"
+	],
 	"engines": {
 		"vscode": "^1.69.0"
 	},
 	"categories": [
-		"Other"
+		"Snippets"
 	],
 	"activationEvents": [
-		"onCommand:clover.helloWorld"
+		"onLanguage:dart"
 	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "clover.helloWorld",
-				"title": "Hello World"
-			}
-		]
-	},
+	"main": "./out/extension/extension.js",
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
@@ -30,16 +32,16 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.69.0",
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "16.x",
+		"@types/vscode": "^1.69.0",
 		"@typescript-eslint/eslint-plugin": "^5.30.0",
 		"@typescript-eslint/parser": "^5.30.0",
+		"@vscode/test-electron": "^2.1.5",
 		"eslint": "^8.18.0",
 		"glob": "^8.0.3",
 		"mocha": "^10.0.0",
-		"typescript": "^4.7.4",
-		"@vscode/test-electron": "^2.1.5"
+		"typescript": "^4.7.4"
 	}
 }
