--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"dependencies": {
-		"semver": "^7.3.7"
+		"semver": "^7.3.7",
+		"vscode-languageclient": "^8.0.2",
+		"yaml": "^2.1.1"
 	},
 	"devDependencies": {
 		"@types/glob": "^7.2.0",
