--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "clover",
+	"name": "clover-vscode",
 	"displayName": "Clover",
 	"description": "Clover extension for VSCode.",
 	"version": "0.0.1",
