--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"type": "git",
 		"url": "https://github.com/yanshouwang/clover-vscode.git"
 	},
+	"icon": "images/clover.png",
 	"license": "SEE LICENSE IN LICENSE",
 	"keywords": [
 		"clover"
