fix(languages): 修复 JSON 别名错误的问题

--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
 		"languages": [
 			{
 				"id": "json",
+				"aliases": [
+					"JSON"
+				],
 				"extensions": [
 					".arb"
-				],
-				"aliases": [
-					"ARB"
 				]
 			}
 		]
